# FinchBot

./: .gitignore  README.md  README_CN.md  pyproject.toml
data/: config.example.yaml
docs/en-US/: api.md  architecture.md  config.md  deployment.md  development.md
docs/en-US/blog/: finchbot-flexible-ai-agent-framework.md
docs/en-US/guide/: usage.md
docs/zh-CN/: api.md  architecture.md  config.md  deployment.md  development.md
docs/zh-CN/blog/: finchbot-flexible-ai-agent-framework.md
docs/zh-CN/guide/: usage.md
src/finchbot/: cli_main.py  workspace.py
src/finchbot/agent/: capabilities.py  capabilities_manager.py  context.py  core.py  factory.py  streaming.py  subagent.py
src/finchbot/agent/tools/: background.py  cron.py
src/finchbot/channels/: __init__.py  langbot.py  selector.py  webhook_server.py
src/finchbot/cli/: chat_session.py  config_manager.py
src/finchbot/config/: hot_reload.py  loader.py  schema.py  secure.py
src/finchbot/cron/: __init__.py  selector.py  service.py  types.py  ui.py
src/finchbot/heartbeat/: service.py
src/finchbot/i18n/: loader.py
src/finchbot/i18n/locales/: en-US.toml  zh-CN.toml
src/finchbot/memory/storage/: sqlite.py
src/finchbot/services/: __init__.py  config.py  manager.py
src/finchbot/sessions/: metadata.py  selector.py
src/finchbot/skills/task-management/: SKILL.md
src/finchbot/tools/: __init__.py  cache.py  core.py  decorator.py  discovery.py  factory.py  middleware.py  tools_generator.py  watcher.py
src/finchbot/tools/builtin/: __init__.py  _utils.py  background.py  config.py  file.py  memory.py  schedule.py  session.py  shell.py  web.py
src/finchbot/tools/mcp/: __init__.py  connector.py  hot_update.py  wrapper.py
tests/: e2e_test.py  test_background.py  test_config_tools.py  test_cron.py  test_shell_guard.py
tests/channels/: test_integration.py  test_langbot.py  test_webhook_server.py
